src/test/ui/const-generics/const-expression-parameter.stderr
error: expected one of `,` or `>`, found `+`
  --> $DIR/const-expression-parameter.rs:13:22
   |
LL |     i32_identity::<1 + 2>();
   |                      ^ expected one of `,` or `>`

warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/const-expression-parameter.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: aborting due to previous error; 1 warning emitted

